Finaliza trabalho com testes REST, GraphQL, Controller e pipeline de CI

--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test/**/*.test.js --timeout 10000 ",
+    "test-rest-external": "mocha test/rest/external/**/*.test.js --timeout 10000 ",
+    "test-controller": "mocha test/controllers/**/*.test.js --timeout 10000 ",
+    "test-graphql-external": "mocha test/graphql/external/**/*.test.js --timeout 10000 ",
+    "start-rest": "node rest/server.js",
+    "start-graphql": "node graphql/server.js"
   },
   "repository": {
     "type": "git",
@@ -20,9 +25,16 @@
   "homepage": "https://github.com/juliodelimas/pgats-2025-02-base#readme",
   "dependencies": {
     "apollo-server-express": "^3.13.0",
+    "chai": "^6.0.1",
     "express": "^4.21.2",
     "graphql": "^16.11.0",
     "jsonwebtoken": "^9.0.2",
+    "mocha": "^11.7.2",
+    "supertest": "^7.1.4",
     "swagger-ui-express": "^5.0.1"
+  },
+  "devDependencies": {
+    "dotenv": "^17.2.2",
+    "sinon": "^21.0.0"
   }
 }
