--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "pgats-2025-02-base",
   "version": "1.0.0",
-  "description": "",
+  "description": "Repositório base para o trabalho de conclusão da disciplina Automação de Testes de APIs",
   "main": "index.js",
   "scripts": {
-    "test": "mocha test/**/*.test.js --timeout 10000 ",
-    "test-rest-external": "mocha test/rest/external/**/*.test.js --timeout 10000 ",
-    "test-controller": "mocha test/controllers/**/*.test.js --timeout 10000 ",
-    "test-graphql-external": "mocha test/graphql/external/**/*.test.js --timeout 10000 ",
+    "test": "mocha test/**/*.test.js --timeout 10000 --exit",
+    "test-rest-external": "mocha test/rest/external/**/*.test.js --timeout 10000 --exit",
+    "test-controller": "mocha test/controllers/**/*.test.js --timeout 10000 --exit",
+    "test-graphql-external": "mocha test/graphql/external/**/*.test.js --timeout 10000 --exit",
     "start-rest": "node rest/server.js",
     "start-graphql": "node graphql/server.js"
   },
@@ -25,16 +25,16 @@
   "homepage": "https://github.com/juliodelimas/pgats-2025-02-base#readme",
   "dependencies": {
     "apollo-server-express": "^3.13.0",
-    "chai": "^6.0.1",
-    "express": "^4.21.2",
-    "graphql": "^16.11.0",
+    "express": "^4.18.2",
+    "graphql": "^16.8.1",
     "jsonwebtoken": "^9.0.2",
-    "mocha": "^11.7.2",
-    "supertest": "^7.1.4",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
-    "dotenv": "^17.2.2",
-    "sinon": "^21.0.0"
+    "chai": "^4.4.1",
+    "dotenv": "^16.4.5",
+    "mocha": "^10.3.0",
+    "sinon": "^17.0.1",
+    "supertest": "^6.3.4"
   }
 }
